# tutor-web-app-ssr

./: .gitignore  Cargo.toml
src/iter5/: dbaccess.rs  errors.rs  handler.rs  model.rs  routes.rs
src/iter5/dbscripts/: user.sql
src/iter6/: errors.rs  model.rs  routes.rs
src/iter6/handler/: auth.rs  course.rs  mod.rs  tutor.rs
static/: static-web-page.html  styles.css
static/iter1/: index.html
static/iter2/: form.html  user.html
static/iter3/: list.html
static/iter5/: register.html
static/iter6/: register.html  signin.html  tutorlist.html  user.html
